# clover

./: CMakeLists.txt  readme.txt
include/: ADBOutputSink.h  ConsoleOutputSink.h  Logger.h  Logger.hpp  Sink.h  SinkTopic.h  Tracer.h  Tracer.hpp  VSOutputSink.h  clover.h  commons.h
include/clover/: ADBOutputSink.h  ConsoleOutputSink.h  Logger.h  RedirectOutputSink.h  Sink.h  SinkTopic.h  Tracer.hpp  VSOutputSink.h  buffer_output_sink.h  commons.h  logger.h  sink_topic.h  tracer.hpp  vs_output_sink.h
src/: ADBOutputSink.cpp  ConsoleOutputSink.cpp  ConsoleOutputSink.h  Logger.cpp  Tracer.cpp  VSOutputSink.cpp  adb_output_sink.cpp  buffer_output_sink.cpp  commons.cpp  console_output_sink.cpp  logger.cpp  redirect_output_sink.cpp  vs_output_sink.cpp
src/cu/: unitybuild_0.cpp
